# andr_vst

./: Cargo.toml  build.sh  bundle.sh
AndrewVst.vst/Contents/: Info.plist
AndrewVst.vst/Contents/MacOS/: AndrewVst
Dist.vst/Contents/: Info.plist
Dist.vst/Contents/MacOS/: Dist
Slew.vst/Contents/: Info.plist
Slew.vst/Contents/MacOS/: Slew
src/: andrew_effect.rs  audio_clip.rs  biquad.rs  lib.rs  log.rs  modulator.rs  mp3ifier.rs
