[package]
name = "conv"
version = "0.1.0"
authors = ["Andrew J.C. Wilson <ajcheyneywilson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# target = "x86_64-pc-windows-gnu"

[dependencies]
vst = "0.2.0"

[lib]
name = "conv"
crate-type = ["cdylib"]